[package]
name = "tiktokmodcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3"
indicatif = "0.18.3"
rand = "0.9"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wreq = { version = "6.0.0-rc.21", features = ["cookies", "json", "stream"] }
wreq-util = "3.0.0-rc.7"
