[package]
name = "tiktokmodcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
futures-util = "0.3"
indicatif = "0.18.3"
rand = "0.9"
regex = "1.12.2"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wreq = { version = "6.0.0-rc.27", features = ["cookies", "json", "stream"] }
wreq-util = "3.0.0-rc.9"
