[package]
name = "tiktokmodcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
indicatif = "0.18"
rand = "0.10"
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wreq = { version = "6.0.0-rc.28", features = ["cookies", "json", "stream"] }
wreq-util = "3.0.0-rc.10"
